@@ -7,25 +7,25 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.98 (gritter) 9/9/06";
+	"@(#)/usr/ucb/otfdump.sl	7.99 (gritter) 9/9/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.98 (gritter) 9/9/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.98 (gritter) 9/9/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.99 (gritter) 9/9/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.99 (gritter) 9/9/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.98 (gritter) 9/9/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.99 (gritter) 9/9/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.98 (gritter) 9/9/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.99 (gritter) 9/9/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.98";
+const char revision[] = "7.99";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.86 (gritter) 9/9/06
+ext.h: * Sccsid @(#)ext.h	1.87 (gritter) 9/9/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.121 (gritter) 9/8/06
 n2.c: * Sccsid @(#)n2.c	1.30 (gritter) 9/5/06
-n3.c: * Sccsid @(#)n3.c	1.153 (gritter) 9/9/06
+n3.c: * Sccsid @(#)n3.c	1.154 (gritter) 9/9/06
 n4.c: * Sccsid @(#)n4.c	1.75 (gritter) 9/9/06
-n5.c: * Sccsid @(#)n5.c	1.93 (gritter) 9/9/06
+n5.c: * Sccsid @(#)n5.c	1.94 (gritter) 9/9/06
 n7.c: * Sccsid @(#)n7.c	1.104 (gritter) 9/9/06
 n8.c: * Sccsid @(#)n8.c	1.34 (gritter) 9/5/06
 n9.c: * Sccsid @(#)n9.c	1.63 (gritter) 9/5/06
